--- a/src/components/Ticker/Ticker.module.css
+++ b/src/components/Ticker/Ticker.module.css
@@ -22,7 +22,8 @@
     padding-left: auto ;
     padding-right: auto ;
     padding-top: 5px;
-    padding-bottom: 5px;
+    /* padding-bottom: 5px; */
+    margin-bottom: 5px;
 }
 
 .title {
