--- a/src/components/InformationBoard/InformationBoard.module.css
+++ b/src/components/InformationBoard/InformationBoard.module.css
@@ -1,7 +1,7 @@
 .informationBoard {
     position: relative;
     margin-top: 20px;
-    min-width: 880px;
+    min-height: 880px;
 }
 .wrapperUl {
     display: flex;
